--- a/less/buttons.less
+++ b/less/buttons.less
@@ -1,160 +1,99 @@
-//
-// Buttons
-// --------------------------------------------------
+//按钮
+.button-variant(@background) {
+	color: #fff;
+	background-color: @background;
+		border-color: darken(@background, 5%);
 
-
-// Base styles
-// --------------------------------------------------
-
-// Core styles
-.btn {
-  display: inline-block;
-  padding: @padding-base-vertical @padding-base-horizontal;
-  margin-bottom: 0; // For input.btn
-  font-size: @font-size-base;
-  font-weight: @btn-font-weight;
-  line-height: @line-height-base;
-  text-align: center;
-  vertical-align: middle;
-  cursor: pointer;
-  border: 1px solid transparent;
-  border-radius: @border-radius-base;
-  white-space: nowrap;
-  .user-select(none);
-
-  &:focus {
-    .tab-focus();
-  }
-
-  &:hover,
-  &:focus {
-    color: @btn-default-color;
-    text-decoration: none;
-  }
-
-  &:active,
-  &.active {
-    outline: 0;
-    background-image: none;
-    .box-shadow(inset 0 3px 5px rgba(0,0,0,.125));
-  }
-
-  &.disabled,
-  &[disabled],
-  fieldset[disabled] & {
-    cursor: not-allowed;
-    pointer-events: none; // Future-proof disabling of clicks
-    .opacity(.65);
-    .box-shadow(none);
-  }
-
+	&:hover,
+	&:focus,
+	&:active,
+	&.active {
+		color: #fff;
+		background-color: darken(@background, 8%);
+			border-color: darken(@background, 17%);
+	}
+	&.disabled,
+	&[disabled],
+	fieldset[disabled] & {
+		&,
+		&:hover,
+		&:focus,
+		&:active,
+		&.active {
+			background-color: @background;
+				border-color: darken(@background, 5%);
+		}
+	}
 }
 
+.btn,[class|="btn"] {
+	display: inline-block;
+	*display:inline;
+	*zoom:1;
+	*overflow: visible;//只有设置这个属性IE下padding才能生效
+	padding: @padding-base-vertical @padding-base-horizontal;
+	margin-bottom: 0; // For input.btn
+	color:#333;
+	font-size: 14px;
+	font-weight: normal;
+	height: 20px;
+	*height:auto;
+	line-height: 20px;
+	*line-height: 16px;
+	text-align: center;
+	text-decoration: none;
+	vertical-align: middle;
+	cursor: pointer;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	white-space: nowrap;
+	background-color: #fff;
+	-webkit-box-sizing: content-box;
+	-moz-box-sizing: content-box;
+	box-sizing: content-box;
+	filter:chroma(color=#000000);
 
-// Alternate buttons
-// --------------------------------------------------
+	&:hover,
+	&:active,
+	&.active,
+	&:focus {
+		color: #333;
+		text-decoration: none;
+		background-color: #ebebeb;
+		border: 1px solid #adadad;
+	}
 
-.btn-default {
-  .button-variant(@btn-default-color; @btn-default-bg; @btn-default-border);
+	&:active,
+	&.active {
+		outline: 0;
+		background-image: none;
+		.box-shadow(inset 0 3px 5px rgba(0,0,0,.125));
+	}
+
+	&.disabled,
+	&[disabled],
+	fieldset[disabled] & {
+		cursor: not-allowed;
+		pointer-events: none; // Future-proof disabling of clicks
+		.opacity(.65);
+		.box-shadow(none);
+	}
+
 }
-.btn-primary {
-  .button-variant(@btn-primary-color; @btn-primary-bg; @btn-primary-border);
-}
-// Warning appears as orange
-.btn-warning {
-  .button-variant(@btn-warning-color; @btn-warning-bg; @btn-warning-border);
-}
-// Danger and error appear as red
-.btn-danger {
-  .button-variant(@btn-danger-color; @btn-danger-bg; @btn-danger-border);
-}
-// Success appears as green
-.btn-success {
-  .button-variant(@btn-success-color; @btn-success-bg; @btn-success-border);
-}
-// Info appears as blue-green
-.btn-info {
-  .button-variant(@btn-info-color; @btn-info-bg; @btn-info-border);
-}
+[class|="btn"][class*="Bgp"] {.button-variant(@bgc-primary)}
+[class|="btn"][class*="Bgs"] {.button-variant(@bgc-success)}
+[class|="btn"][class*="Bgw"] {.button-variant(@bgc-warning)}
+[class|="btn"][class*="Bgd"] {.button-variant(@bgc-danger)}
+[class|="btn"][class*="Bgi"] {.button-variant(@bgc-info)}
 
+[class|="btn"][class*="Ml"] {padding: 10px 16px;font-size: 18px;line-height: 1.33;border-radius: 6px;}
+[class|="btn"][class*="Ms"] {padding: 5px 10px;font-size: 12px;line-height: 1.5;border-radius: 3px;}
+[class|="btn"][class*="Mx"] {padding: 1px 5px;font-size: 12px;line-height: 1.5;border-radius: 3px;}
 
-// Link buttons
-// -------------------------
+[class|="btn"][class*="Db"] {display: block;width: 100%;padding-right: 0;padding-left: 0;margin-top: 5px;}
 
-// Make a button look and behave like a link
-.btn-link {
-  color: @link-color;
-  font-weight: normal;
-  cursor: pointer;
-  border-radius: 0;
+*a.btn,*a[class|="btn"] {padding:8px 12px;}
+*a[class|="btn"][class*="Ml"] {padding:13px 16px;}
+*a[class|="btn"][class*="Ms"] {padding:8px 10px;}
+*a[class|="btn"][class*="Mx"] {padding:4px 5px;}
 
-  &,
-  &:active,
-  &[disabled],
-  fieldset[disabled] & {
-    background-color: transparent;
-    .box-shadow(none);
-  }
-  &,
-  &:hover,
-  &:focus,
-  &:active {
-    border-color: transparent;
-  }
-  &:hover,
-  &:focus {
-    color: @link-hover-color;
-    text-decoration: underline;
-    background-color: transparent;
-  }
-  &[disabled],
-  fieldset[disabled] & {
-    &:hover,
-    &:focus {
-      color: @btn-link-disabled-color;
-      text-decoration: none;
-    }
-  }
-}
-
-
-// Button Sizes
-// --------------------------------------------------
-
-.btn-lg {
-  // line-height: ensure even-numbered height of button next to large input
-  .button-size(@padding-large-vertical; @padding-large-horizontal; @font-size-large; @line-height-large; @border-radius-large);
-}
-.btn-sm,
-.btn-xs {
-  // line-height: ensure proper height of button next to small input
-  .button-size(@padding-small-vertical; @padding-small-horizontal; @font-size-small; @line-height-small; @border-radius-small);
-}
-.btn-xs {
-  padding: 1px 5px;
-}
-
-
-// Block button
-// --------------------------------------------------
-
-.btn-block {
-  display: block;
-  width: 100%;
-  padding-left: 0;
-  padding-right: 0;
-}
-
-// Vertically space out multiple block buttons
-.btn-block + .btn-block {
-  margin-top: 5px;
-}
-
-// Specificity overrides
-input[type="submit"],
-input[type="reset"],
-input[type="button"] {
-  &.btn-block {
-    width: 100%;
-  }
-}
